2009-01-12  Stipe Tolj  <stolj at kannel.org>
    * Making stable release 1.4.2.