@@ -1,2 +1,8 @@
+2009-01-29 Alexander Malysh <amalysh at kannel.org>
+    * gwlib/octstr.c, test/test_octstr_format.c: applied patch that adds
+      support for %llu, %llx etc. to octstr_format. Also added test.
+      Thanks to Nikos Balkanas <nbalkanas at gmail.com> for patch.
+      [Msg-Id: <7f4386bc0901290255y3f8f44feya6132b138b0b6003@mail.gmail.com>]
+
 2009-01-12  Stipe Tolj  <stolj at kannel.org>
     * Making stable release 1.4.2.
